[package]
name = "sortstat"
version = "0.1.0"
authors = ["Timofei Korostelev <timofei_public@dranik.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.26"
rand = {version = "0.8.3", features = ["small_rng"]}